# src/main/java/fiit/mtaa/publisher/controller/ArticleController.java
@@ -3,15 +3,14 @@ package fiit.mtaa.publisher.controller;
 import fiit.mtaa.publisher.bl.service.ArticleService;
 import fiit.mtaa.publisher.bl.service.UserService;
 import fiit.mtaa.publisher.dto.*;
+import fiit.mtaa.publisher.exception.ConflictException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.web.bind.annotation.*;
+
 import javax.persistence.EntityNotFoundException;
 import java.util.UUID;
 
@@ -27,14 +26,16 @@ public class ArticleController extends AbstractController {
     @Autowired
     private UserService userService;
 
-    @Autowired
-    private JwtDecoder jwtDecoder;
-
     @GetMapping("/{id}")
-    public ResponseEntity<ArticleDetailedDTO> getArticleById(@PathVariable String id) {
+    public ResponseEntity<ArticleDetailedDTO> getArticleById(
+            @PathVariable String id,
+            @RequestHeader(value = "Authorization", required = false) String userId) {
+
+        var user = userService.checkIfUserExists(userId);
+
         ArticleDetailedDTO article;
         try {
-            article = articleService.getById(UUID.fromString(id));
+            article = articleService.getById(UUID.fromString(id), user);
         } catch (EntityNotFoundException e) {
             return ResponseEntity.status(404).build();
         } catch (Exception e) {
@@ -47,16 +48,14 @@ public class ArticleController extends AbstractController {
 
     @GetMapping("")
     public ResponseEntity<Page<ArticleSimpleDTO>> getArticles(
-            @RequestHeader(name = "authorization", required = false) String acessToken,
+            @RequestHeader(name = "Authorization", required = false) String accessToken,
             @RequestParam(required = false, defaultValue = "") String author,
             @RequestParam(required = false, defaultValue = "") String title,
             @RequestParam(required = false, defaultValue = "") String category,
             @RequestParam(required = false, defaultValue = "0") Integer page,
             @RequestParam(required = false, defaultValue = "10") Integer pageSize) {
 
-        if (acessToken != null && acessToken.startsWith("Bearer")) {
-            userService.checkIfUserExists(jwtDecoder.decode(acessToken.split(" ")[1]));
-        }
+        var user = userService.checkIfUserExists(accessToken);
 
         var filter = new FilterCriteria();
         filter.setAuthor(author);
@@ -66,7 +65,7 @@ public class ArticleController extends AbstractController {
         filter.setPageSize(pageSize);
 
         try {
-            var articles = articleService.getFiltered(filter);
+            var articles = articleService.getFiltered(filter, user);
             return ResponseEntity.ok(articles);
         } catch (Exception e) {
             logger.error(e.getMessage());
@@ -103,14 +102,41 @@ public class ArticleController extends AbstractController {
     }
 
     @PutMapping(value = "/{articleId}/like")
-    public ResponseEntity<Integer> likeArticle(@RequestHeader("Auth-Token") String userId,
+    public ResponseEntity<Integer> likeArticle(
+            @RequestHeader("Authorization") String userId,
             @PathVariable String articleId) {
-        throw new RuntimeException("Not yet implemented");
+
+        var user = userService.checkIfUserExists(userId);
+
+        try {
+            articleService.likeArticle(UUID.fromString(articleId), user);
+            return ResponseEntity.ok().build();
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(404).build();
+        } catch (ConflictException e) {
+            return ResponseEntity.status(409).build();
+        } catch (Exception e) {
+            logger.error(e.getMessage(), e);
+            return ResponseEntity.status(500).build();
+        }
     }
 
     @PutMapping(value = "/{articleId}/unlike")
-    public ResponseEntity<Integer> unlikeArticle(@RequestHeader("Auth-Token") String userId,
-            @PathVariable String articleId) {
-        throw new RuntimeException("Not yet implemented");
+    public ResponseEntity<Integer> unlikeArticle(@RequestHeader("Authorization") String userId,
+                                                 @PathVariable String articleId) {
+
+        var user = userService.checkIfUserExists(userId);
+
+        try {
+            articleService.unlikeArticle(UUID.fromString(articleId), user);
+            return ResponseEntity.ok().build();
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(404).build();
+        } catch (ConflictException e) {
+            return ResponseEntity.status(409).build();
+        } catch (Exception e) {
+            logger.error(e.getMessage(), e);
+            return ResponseEntity.status(500).build();
+        }
     }
 }
